Smaller updates. - Added hasNoEmailAddresses() and hasNoTelephoneNumbers() to the caller interface. - Corrected the use of line breaks in template previews. - Display email addresses and telephone numbers on their own line. - Display "none" if a caller/tenant has no email address or telephone number in tenant results.

--- a/ng-ncc-app/src/assets/scss/_unorganised.scss
+++ b/ng-ncc-app/src/assets/scss/_unorganised.scss
@@ -99,6 +99,11 @@ $value-list-ratio: 100 / ($value-list-horizontal-label-ratio + $value-list-horiz
     margin-bottom: .5rem;
 }
 
+.value-list__value__line {
+    display: block;
+    margin-bottom: .2rem;
+}
+
 .value-list--horizontal {
     display: flex;
     flex-wrap: wrap;
